--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <div class="header-contacts">
                         <p class="header-text text-color">Позвоните нам</p>
                         <div class="icon-tel">
-                            <img src="/img/icon/icon-tel.png" />
+                            <img src="img/icon/icon-tel.png" />
                             <a class="header-contacts-tel" href="tel:+83435465550">8 3435 46-55-50</a>
                         </div>
                         <a class="header-contacts-mail" href="mailto:465550@mail.ru">465550@mail.ru</a>
@@ -63,7 +63,7 @@
                             <p class="main-text-section">предназначены для защиты электрических цепей от токов перегрузки и токов КЗ</p>
                             <a class="main-link" href="">Подробнее ></a>
                         </div>
-                        <img src="/img/main-img.png" alt="Выключатель автоматический АЕ-2043">
+                        <img src="img/main-img.png" alt="Выключатель автоматический АЕ-2043">
                     </div>
                     <div class="main slider__tem">
                         <div class="main-text">
@@ -72,7 +72,7 @@
                             <p class="main-text-section">предназначены для защиты электрических цепей от токов перегрузки и токов КЗ</p>
                             <a class="main-link" href="">Подробнее ></a>
                         </div>
-                        <img src="/img/main-img.png" alt="Выключатель автоматический АЕ-2043">
+                        <img src="img/main-img.png" alt="Выключатель автоматический АЕ-2043">
                     </div>
                     <div class="main slider__tem">
                         <div class="main-text">
@@ -81,7 +81,7 @@
                             <p class="main-text-section">предназначены для защиты электрических цепей от токов перегрузки и токов КЗ</p>
                             <a class="main-link" href="">Подробнее ></a>
                         </div>
-                        <img src="/img/main-img.png" alt="Выключатель автоматический АЕ-2043">
+                        <img src="img/main-img.png" alt="Выключатель автоматический АЕ-2043">
                     </div>
                 </div>
             </div>
