creating a burger-menu

--- a/index.html
+++ b/index.html
@@ -18,8 +18,11 @@
             <div class="container-header">
                 <div class="header-block">
                     <div class="header_logo">
-                        <img src="img/logo/logo.png" alt="Логотип">
+                        <img class="header-logo__img" src="img/logo/logo.png" alt="Логотип">
                         <p class="header-text">Локомотив Вашего бизнеса</p>
+                    </div>
+                    <div class="header__burger">
+                        <span></span>
                     </div>
                     <div class="header-form">
                         <form>
